; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/common/osi/extr_hash_map.c_find_bucket_entry_.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/common/osi/extr_hash_map.c_find_bucket_entry_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i64 (i32, i8*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_5__* (i32*, i8*)* @find_bucket_entry_ to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_5__* @find_bucket_entry_(i32* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_5__*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %3, align 8
  br label %41

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = call i32* @list_begin(i32* %12)
  store i32* %13, i32** %6, align 8
  br label %14

14:                                               ; preds = %37, %11
  %15 = load i32*, i32** %6, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = call i32* @list_end(i32* %16)
  %18 = icmp ne i32* %15, %17
  br i1 %18, label %19, label %40

19:                                               ; preds = %14
  %20 = load i32*, i32** %6, align 8
  %21 = call i64 @list_node(i32* %20)
  %22 = inttoptr i64 %21 to %struct.TYPE_5__*
  store %struct.TYPE_5__* %22, %struct.TYPE_5__** %7, align 8
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 1
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  %27 = load i64 (i32, i8*)*, i64 (i32, i8*)** %26, align 8
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = load i8*, i8** %5, align 8
  %32 = call i64 %27(i32 %30, i8* %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %36

34:                                               ; preds = %19
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  store %struct.TYPE_5__* %35, %struct.TYPE_5__** %3, align 8
  br label %41

36:                                               ; preds = %19
  br label %37

37:                                               ; preds = %36
  %38 = load i32*, i32** %6, align 8
  %39 = call i32* @list_next(i32* %38)
  store i32* %39, i32** %6, align 8
  br label %14

40:                                               ; preds = %14
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %3, align 8
  br label %41

41:                                               ; preds = %40, %34, %10
  %42 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  ret %struct.TYPE_5__* %42
}

declare dso_local i32* @list_begin(i32*) #1

declare dso_local i32* @list_end(i32*) #1

declare dso_local i64 @list_node(i32*) #1

declare dso_local i32* @list_next(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
